deploy/k8s/cart-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: flashsale
  labels:
    app: cart-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: flashsale/cart-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          resources:
            requests:
              cpu: "150m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 25
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: flashsale
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
      name: http
  selector:
    app: cart-service
