deploy/k8s/inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: flashsale
  labels:
    app: inventory-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
        - name: inventory-service
          image: flashsale/inventory-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: "300m"
              memory: "768Mi"
            limits:
              cpu: "1500m"
              memory: "1536Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 25
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 35
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: flashsale
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      name: http
  selector:
    app: inventory-service
